[package]
name = "lain-app"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = "0.60"
env_logger = "0.11.6"
bevy = "0.15"
bevy_vrm = { git = "https://github.com/refandhika/bevy_vrm.git", branch = "main" }
#bevy_vrm = "0.0.12"
#gltf = { version = "1.4.1", features = ["import"] }
#bytemuck = "1.21.0"
#pollster = "0.4.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
#[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
#codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
#lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
#[profile.wasm-release]
# Default to release profile values.
#inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
#opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
#strip = "debuginfo"